# 0-shell

./: &1  .0_config.json  .dockerignore  .gitignore  1  4  Cargo.toml  Dockerfile  Makefile  PROJECT_INDEX.md  README.md  a.txt  abc.txt  directory_metadata.txt  err.txt  error.txt  group_output.txt  install-docker-rootless.zsh  install.sh  jobs.txt  known_errors.todo  me.todo  output.txt  strace.txt  test.txt  test_ctrl_z.sh  test_execution.rs  text.txt  tmp  tmp.rs  ttt.txt
shell/: 1  Cargo.toml
shell/src/: builtins.rs  commands_handler.rs  config.rs  envirement.rs  error.rs  eval.rs  events_handler.rs  exec.rs  expansion.rs  jobs.rs  lib.rs  main.rs  parser.rs  redirection.rs  shell1.rs  signal_handler.rs
shell/src/commands/: bg.rs  cat.rs  cd.rs  cp.rs  echo.rs  exit.rs  export.rs  fals.rs  fg.rs  jobs.rs  kill.rs  ls.rs  mkdir.rs  mv.rs  pwd.rs  rm.rs  test.rs  tru.rs  typ.rs
shell/src/executor/: exec_and.rs  exec_command.rs  exec_for.rs  exec_group.rs  exec_if.rs  exec_not.rs  exec_or.rs  exec_pipeline.rs  exec_sequence.rs  exec_subshell.rs  exec_until.rs  exec_while.rs  merge_redirects_for_group.rs  mod.rs  parse_level.rs  run_commande.rs  spawn_commande.rs
shell/src/executorr/: mod.rs  run_commande.rs  spawn_commande.rs
shell/src/features/: history.rs  jobs.rs
shell/src/lexer/: mod.rs  tokenize.rs  types.rs
shell/src/parser/: mod.rs  parse_assignment.rs  parse_background.rs  parse_command.rs  parse_command_or_if.rs  parse_flow_control.rs  parse_for.rs  parse_function.rs  parse_group.rs  parse_if.rs  parse_op.rs  parse_pipeline.rs  parse_redirection.rs  (+3 more)
(+66 files in other folders)
