cargo-features = ["edition2024"]

[package]
name = "shell"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dirs = "6.0.0"
fs = "0.0.5"
lazy_static = "1.5.0"
regex = "1.11.1"
chrono = "0.4"
users = "0.11"
termion = "4.0.5"
whoami = "1.6.0"
libc = "0.2.174"
atty = "0.2.14"
nix = { version = "0.27", features = ["fs"] }
signal-hook = "0.3.18"
signal = "0.7.0"
unicode-width = "0.2.1"
